docs: add delete opening swagger doc
